--- a/event-manager-ios/Storyboards/Base.lproj/Main.storyboard
+++ b/event-manager-ios/Storyboards/Base.lproj/Main.storyboard
@@ -4,7 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -26,6 +26,7 @@
                         <segue destination="bRl-M3-DPW" kind="relationship" relationship="viewControllers" id="aru-ez-XbE"/>
                         <segue destination="M8k-yD-Ikc" kind="relationship" relationship="viewControllers" id="d2S-xm-L2q"/>
                         <segue destination="FBJ-x6-YUw" kind="relationship" relationship="viewControllers" id="SFn-ed-LBr"/>
+                        <segue destination="0hO-uJ-jUt" kind="presentation" identifier="ShowLoading" modalPresentationStyle="overCurrentContext" modalTransitionStyle="crossDissolve" id="StV-mp-VEf"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Isy-i3-Saj" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -216,7 +217,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ZOI-83-O0Y">
-                                <rect key="frame" x="0.0" y="128" width="375" height="426"/>
+                                <rect key="frame" x="0.0" y="108" width="375" height="446"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EventCell" rowHeight="66" id="2OT-SI-w5T" customClass="EventCell" customModule="event_manager_ios" customModuleProvider="target">
@@ -301,13 +302,27 @@
                                 </prototypes>
                             </tableView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VOi-GG-YhF">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="128"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="108"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="QMb-Dy-Con"/>
+                                    <constraint firstAttribute="height" constant="108" id="QMb-Dy-Con"/>
+                                    <constraint firstAttribute="height" constant="52" id="g4A-wU-e11"/>
                                 </constraints>
-                                <connections>
-                                    <segue destination="Cn6-rZ-LWC" kind="embed" id="QnD-ls-JQi"/>
-                                </connections>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="point" keyPath="layer.shadowOffset">
+                                        <point key="value" x="0.0" y="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.shadowOpacity">
+                                        <real key="value" value="0.10000000000000001"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.shadowRadius">
+                                        <integer key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="g4A-wU-e11"/>
+                                    </mask>
+                                </variation>
                             </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -345,6 +360,8 @@
                         </userDefinedRuntimeAttributes>
                     </navigationItem>
                     <connections>
+                        <outlet property="groupAndFilterConstraint" destination="QMb-Dy-Con" id="1eM-hN-8PH"/>
+                        <outlet property="onlyGroupConstraint" destination="g4A-wU-e11" id="flM-1b-2gu"/>
                         <outlet property="tableView" destination="ZOI-83-O0Y" id="afD-Bf-cbV"/>
                         <segue destination="4x3-da-nLW" kind="show" identifier="ShowProfile" id="9Qy-Gf-gKA"/>
                         <segue destination="L4h-S1-xy1" kind="show" identifier="ShowEventDetails" id="zoX-68-gK2"/>
@@ -364,20 +381,13 @@
             </objects>
             <point key="canvasLocation" x="508" y="-940.47976011994012"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="vJ5-ov-Rr4">
+        <!--LoadingViewController-->
+        <scene sceneID="1Ko-LA-sz1">
             <objects>
-                <viewController id="Cn6-rZ-LWC" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="rXv-kb-fQK">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="128"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                        <viewLayoutGuide key="safeArea" id="JQi-1C-8vG"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qxs-jt-Y1T" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="Shared" referencedIdentifier="LoadingViewController" id="0hO-uJ-jUt" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gkl-sc-kQV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1308" y="-1183"/>
+            <point key="canvasLocation" x="-1118" y="-1314"/>
         </scene>
         <!--Details-->
         <scene sceneID="J8R-GM-qAd">
@@ -648,7 +658,7 @@
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.shadowOpacity">
-                                        <real key="value" value="0.40000000000000002"/>
+                                        <real key="value" value="0.10000000000000001"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.shadowRadius">
                                         <integer key="value" value="2"/>
