--- a/event-manager-ios/Storyboards/Base.lproj/Main.storyboard
+++ b/event-manager-ios/Storyboards/Base.lproj/Main.storyboard
@@ -217,7 +217,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ZOI-83-O0Y">
-                                <rect key="frame" x="0.0" y="108" width="375" height="446"/>
+                                <rect key="frame" x="0.0" y="94" width="375" height="460"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EventCell" rowHeight="66" id="2OT-SI-w5T" customClass="EventCell" customModule="event_manager_ios" customModuleProvider="target">
@@ -302,18 +302,75 @@
                                 </prototypes>
                             </tableView>
                             <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VOi-GG-YhF">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="108"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="94"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ZgH-Y2-uV4">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="108"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="94"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7WN-co-7sZ">
-                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="108"/>
-                                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="94"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BI4-Sp-nHu">
+                                                        <rect key="frame" x="8" y="8" width="171.5" height="20.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="string" keyPath="localizedText" value="Events.Group"/>
+                                                        </userDefinedRuntimeAttributes>
+                                                    </label>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ah9-Y9-Fr1">
+                                                        <rect key="frame" x="8" y="36.5" width="171.5" height="49.5"/>
+                                                        <state key="normal" title="Button"/>
+                                                        <connections>
+                                                            <action selector="changeGroup:" destination="rbq-S1-cPZ" eventType="touchUpInside" id="SV2-22-GYP"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstItem="BI4-Sp-nHu" firstAttribute="top" secondItem="7WN-co-7sZ" secondAttribute="top" constant="8" id="6JH-RR-Qcd"/>
+                                                    <constraint firstAttribute="bottom" secondItem="ah9-Y9-Fr1" secondAttribute="bottom" constant="8" id="6U0-r0-NFd"/>
+                                                    <constraint firstItem="ah9-Y9-Fr1" firstAttribute="leading" secondItem="7WN-co-7sZ" secondAttribute="leading" constant="8" id="DG3-Vw-gWG"/>
+                                                    <constraint firstAttribute="trailing" secondItem="BI4-Sp-nHu" secondAttribute="trailing" constant="8" id="InK-2j-pVz"/>
+                                                    <constraint firstAttribute="trailing" secondItem="ah9-Y9-Fr1" secondAttribute="trailing" constant="8" id="K7w-YR-x8f"/>
+                                                    <constraint firstItem="ah9-Y9-Fr1" firstAttribute="top" secondItem="BI4-Sp-nHu" secondAttribute="bottom" constant="8" id="PoV-iT-7yj"/>
+                                                    <constraint firstItem="BI4-Sp-nHu" firstAttribute="leading" secondItem="7WN-co-7sZ" secondAttribute="leading" constant="8" id="SVq-sC-um5"/>
+                                                </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lZn-at-HVP">
-                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="108"/>
-                                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="94"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AFl-3e-Hx1">
+                                                        <rect key="frame" x="8" y="8" width="171.5" height="20.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="string" keyPath="localizedText" value="Events.Filter"/>
+                                                        </userDefinedRuntimeAttributes>
+                                                    </label>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XZu-gf-vZB">
+                                                        <rect key="frame" x="8" y="36.5" width="171.5" height="49.5"/>
+                                                        <state key="normal" title="Button"/>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="string" keyPath="localizedTitle" value="Events.Filter.All.Text"/>
+                                                        </userDefinedRuntimeAttributes>
+                                                        <connections>
+                                                            <action selector="changeFilter:" destination="rbq-S1-cPZ" eventType="touchUpInside" id="QbR-QR-HlA"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstItem="XZu-gf-vZB" firstAttribute="top" secondItem="AFl-3e-Hx1" secondAttribute="bottom" constant="8" id="1lb-l9-Qg4"/>
+                                                    <constraint firstAttribute="trailing" secondItem="AFl-3e-Hx1" secondAttribute="trailing" constant="8" id="Cke-Vh-NPr"/>
+                                                    <constraint firstItem="AFl-3e-Hx1" firstAttribute="top" secondItem="lZn-at-HVP" secondAttribute="top" constant="8" id="D0E-Ip-VRR"/>
+                                                    <constraint firstItem="AFl-3e-Hx1" firstAttribute="leading" secondItem="lZn-at-HVP" secondAttribute="leading" constant="8" id="N56-wa-EbF"/>
+                                                    <constraint firstAttribute="bottom" secondItem="XZu-gf-vZB" secondAttribute="bottom" constant="8" id="cCV-D0-CPb"/>
+                                                    <constraint firstItem="XZu-gf-vZB" firstAttribute="leading" secondItem="lZn-at-HVP" secondAttribute="leading" constant="8" id="oRP-Fa-QVA"/>
+                                                    <constraint firstAttribute="trailing" secondItem="XZu-gf-vZB" secondAttribute="trailing" constant="8" id="taJ-oY-pt1"/>
+                                                </constraints>
                                             </view>
                                         </subviews>
                                     </stackView>
@@ -321,7 +378,7 @@
                                 <constraints>
                                     <constraint firstItem="ZgH-Y2-uV4" firstAttribute="top" secondItem="VOi-GG-YhF" secondAttribute="top" id="1eg-Qy-e8L"/>
                                     <constraint firstItem="ZgH-Y2-uV4" firstAttribute="centerX" secondItem="VOi-GG-YhF" secondAttribute="centerX" id="GLI-BO-bzD"/>
-                                    <constraint firstAttribute="height" constant="108" id="QMb-Dy-Con"/>
+                                    <constraint firstAttribute="height" constant="94" id="QMb-Dy-Con"/>
                                     <constraint firstItem="ZgH-Y2-uV4" firstAttribute="centerY" secondItem="VOi-GG-YhF" secondAttribute="centerY" id="aF3-lX-TDv"/>
                                     <constraint firstAttribute="height" constant="52" id="g4A-wU-e11"/>
                                     <constraint firstItem="ZgH-Y2-uV4" firstAttribute="leading" secondItem="VOi-GG-YhF" secondAttribute="leading" id="nhL-Uv-f3C"/>
@@ -379,11 +436,14 @@
                         </userDefinedRuntimeAttributes>
                     </navigationItem>
                     <connections>
+                        <outlet property="changeFilterButton" destination="XZu-gf-vZB" id="4Dw-L2-PpG"/>
+                        <outlet property="changeGroupButton" destination="ah9-Y9-Fr1" id="eyJ-pf-YtW"/>
                         <outlet property="groupAndFilterConstraint" destination="QMb-Dy-Con" id="1eM-hN-8PH"/>
                         <outlet property="onlyGroupConstraint" destination="g4A-wU-e11" id="flM-1b-2gu"/>
                         <outlet property="tableView" destination="ZOI-83-O0Y" id="afD-Bf-cbV"/>
                         <segue destination="4x3-da-nLW" kind="show" identifier="ShowProfile" id="9Qy-Gf-gKA"/>
                         <segue destination="L4h-S1-xy1" kind="show" identifier="ShowEventDetails" id="zoX-68-gK2"/>
+                        <segue destination="yOO-3w-rDT" kind="show" identifier="ShowFilterSelect" id="klO-BD-dPl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fuh-a1-FOi" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -399,6 +459,34 @@
                 </toolbar>
             </objects>
             <point key="canvasLocation" x="508" y="-940.47976011994012"/>
+        </scene>
+        <!--Event Filter Table View Controller-->
+        <scene sceneID="gsk-06-1lN">
+            <objects>
+                <tableViewController storyboardIdentifier="EventFilterTableViewController" hidesBottomBarWhenPushed="YES" id="yOO-3w-rDT" customClass="EventFilterTableViewController" customModule="event_manager_ios" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="dwk-6P-RvR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="EventFilterCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="EventFilterCell" id="oIF-fq-sKi" customClass="EventFilterCell" customModule="event_manager_ios" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oIF-fq-sKi" id="Xdn-li-X6w">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="yOO-3w-rDT" id="DoB-mC-F6k"/>
+                            <outlet property="delegate" destination="yOO-3w-rDT" id="5e7-sX-Sp0"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5Eb-Ej-b71" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2060" y="-1636"/>
         </scene>
         <!--LoadingViewController-->
         <scene sceneID="1Ko-LA-sz1">
@@ -722,7 +810,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Row-Ae-7fr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2060" y="-962.06896551724151"/>
+            <point key="canvasLocation" x="2060" y="-940"/>
         </scene>
         <!--ProfileViewController-->
         <scene sceneID="BtC-qz-bcv">
